nginx/bases/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx.default.uk8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
